
-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.1-5. (2019-08-26) -
-------------------------------------------------------

BUG FIXING
  o Table for MH in PDF reports was fixed.
  o Header of sections were fixed in PDF reports.
  o IRT parameter estimates table was fixed in PDF reports.

MAJOR UPDATES
  o DIF/DDF detection methods for ordinal data were added. DIF/Fairness
    section was updated.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.1-4. (2019-08-07) -
-------------------------------------------------------

BUG FIXING
  o In DIF section, Summary table for total scores now displays correct number
    of respondents in groups (N).

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.1-3. (2019-07-02) -
-------------------------------------------------------

BUG FIXING
  o Bug in Adjacent model in Regression tab was fixed. Matching criterion
    and parametrization inputs now have effect on model.
  o Bug in plotMultinomial() was fixed. Function now displays more than 12
    response patterns as linetype.

MINOR UPDATES
  o Range for x-axes in plotAdjacent() and plotCumulative() were updated to
    avoid removing data.
  o Some typos were fixed.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.1-2. (2019-07-01) -
-------------------------------------------------------

MAJOR UPDATES
  o Cronbach's alpha with CI was added into reports.
  o Bonferroni correction for multiple comparison was added as an option
    for correction methods in Regression, DIF and Reports tabs.

MINOR UPDATES
  o Warning for table for parameters in Bock's IRT model was modified.
  o Wright map now considers item names when option Keep item names.
  o Some wording was updated.
  o Some typos were fixed.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.1-1. (2019-06-28) -